--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,13 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    
+    <script src="js/directives/directives.js"></script>
+    <script src="js/services/TodosService.js"></script>
+    
     <script src="js/controllers.js"></script>
+    <script src="js/controllers/CategoriesCtrl.js"></script>
+
   </head>
 
   <body ng-app="starter">
