--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
     <script src="js/app.js"></script>
     
     <script src="js/directives/directives.js"></script>
+     <script src="js/filters/filters.js"></script>
     <script src="js/services/TodosService.js"></script>
 
     <script src="js/controllers/controllers.js"></script>
