--- a/www/index.html
+++ b/www/index.html
@@ -18,7 +18,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-toast/src/ionic-toast.js"></script>
-      <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular-messages.js"></script>
+    <script src="lib/angular-messages.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -27,7 +27,7 @@
     <script src="js/app.js"></script>
     
     <script src="js/directives/directives.js"></script>
-     <script src="js/filters/filters.js"></script>
+    <script src="js/filters/filters.js"></script>
     <script src="js/services/TodosService.js"></script>
 
     <script src="js/controllers/controllers.js"></script>
