--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,8 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-toast/src/ionic-toast.js"></script>
