--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,7 @@
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-toast/src/ionic-toast.js"></script>
-    <script src="lib/angular-messages.js"></script>
+    <script src="lib/angular-messages/angular-messages.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
