--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/directives/directives.js"></script>
     <script src="js/filters/filters.js"></script>
     <script src="js/services/TodosService.js"></script>
+    <script src="js/services/modal-service.js"></script>
 
     <script src="js/controllers/controllers.js"></script>
     <script src="js/controllers/CategoriesCtrl.js"></script>
