--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,8 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ionic-toast/src/ionic-toast.js"></script>
     <script src="lib/angular-messages/angular-messages.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
