--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     
 
-    <!-- cordova script (this will be a 404 during development) -->
+    <!-- cordova script (this will be a 404 during development) aaa-->
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
